--- a/hobilerim.html
+++ b/hobilerim.html
@@ -10,8 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
-
-    <title>Hakkımda</title>
+    <title>Hobilerim</title>
 </head>
 <body id="hobilerim_sayfa">
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark " style="background-color: #0060AA;">
