--- a/irgandi.html
+++ b/irgandi.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
-    <title>Hakkımda</title>
+    <title>Şehrim - Irgandı Köprüsü</title>
 </head>
 <body id="sehrim_sayfa">
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #a51818;">
@@ -65,7 +65,7 @@
               </div>
               <div  class="row mt-5  mb-1 justify-content-start text-white ">
                 <div class="col-1"></div>
-                <div class="col-9"><span class="h3">Bursa Tophane</span></div>
+                <div class="col-9"><span class="h3">Irgandı Köprüsü</span></div>
               </div>
               <div  class="row mt-3  mb-1 justify-content-start text-white ">
                 <div class="col-1"></div>
