--- a/mirasimiz.html
+++ b/mirasimiz.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Marvel">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <title>Hakkımda</title>
+    <title>Mirasımız</title>
 </head>
 <body id="mirasimiz_sayfa">
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fff000;">
