--- a/iletisim.html
+++ b/iletisim.html
@@ -55,7 +55,7 @@
               <div class="row my-3 justify-content-center">
                 <div class="col-sm-11 col-xs-12"> <p class="h3 text-center"> İletişim Formu</p></div>
               </div>
-              <form action="iletisim.php" method="post">
+              <form action="iletisim.php" method="post" enctype="multipart/form-data">
                   <div class="form-group">
                     <label for="name">İsim Soyisim (*)</label>
                     <input type="text" class="form-control" id="isim" name="isim" placeholder="İsminizi girin">
